# ScAI-Reader

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  fly.toml
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: ai.py  config.py  llm.py  main.py
backend/app/pdf/: backend.py  citations.py  columns.py  figures.py  pdfium_backend.py  types.py
backend/app/routes/: annotations.py  citations.py  deps.py  documents.py  explanations.py  figures.py  outline.py  pages.py  search.py  settings.py  stateless_ai.py  text.py
backend/app/storage/: db.py  files.py
backend/tests/: conftest.py
backend/tests/contract/: test_backend_contract.py  test_visual_goldens.py
backend/tests/fixtures/: build_fixtures.py
backend/tests/integration/: test_annotations.py  test_citations.py  test_concurrent_renders.py  test_explanation_chat.py  test_outline.py  test_routes.py  test_search.py  test_sessions.py  test_settings.py  test_stateless_ai.py  test_text_endpoint.py
backend/tests/unit/: test_ai.py  test_citations.py  test_columns.py  test_config.py  test_figures.py  test_llm.py  test_outline_tree.py  test_storage_files.py
docs/: DEPLOY.md  HOSTING.md
docs/specs/: 01-deployment-fly.md  02-browser-storage-foundation.md  03-backend-stateless-ai.md  04-frontend-library.md  README.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  playwright.app.config.ts  playwright.config.ts  playwright.storage.config.ts  tsconfig.tsbuildinfo  vite.config.ts
scripts/: ci.sh  install.sh  run.sh  setup.sh
(+85 files in other folders)
