[project]
name = "scai-reader-backend"
version = "0.1.0"
description = "Backend for a from-scratch Python PDF reader"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pypdfium2>=4.30",
    "pypdf>=5.0",
    "Pillow>=10.4",
    "python-multipart>=0.0.12",
    "anthropic>=0.80",
    "openai>=1.40",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.115",
    "httpx>=0.27",
    "scikit-image>=0.24",
    "numpy>=2.0",
    "reportlab>=4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take >1s (visual goldens, E2E)",
    "visual: visual golden comparison tests",
    "contract: PdfBackend contract tests",
    "integration: FastAPI route integration tests",
    "perf: pytest-benchmark performance tests",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.setuptools.packages.find]
include = ["app*"]
